--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         }
     ],
     "liveSassCompile.settings.generateMap": false,
-    "minify.minifyExistingOnSave": true
+    "minify.minifyExistingOnSave": true,
+    "liveServer.settings.port": 8080
 }
